--- a/demos/app/button/sample.component.html
+++ b/demos/app/button/sample.component.html
@@ -16,102 +16,168 @@
         <article class="sample-column">
             <h4 class="sample-title">Flat Buttons</h4>
             <div class="buttons-sample">
-                <button igxButton="flat" igxRipple>Flat</button>
-                <button igxButton="flat" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Flat</button>
-                <button igxButton="flat" igxRipple igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Flat</button>
-                <button igxButton="flat" igxRipple>Flat</button>
-                <button igxButton="flat" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Flat</button>
-                <button igxButton="flat" igxRipple igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Flat</button>
-                <button igxButton="flat" igxRipple [disabled]="true">Flat</button>
-                <button igxButton="flat" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">Flat</button>
-                <button igxButton="flat" igxRipple igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">Flat</button>
+                <div class="button-sample">
+                    <button igxButton="flat" igxRipple>Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxRipple igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxRipple>Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxRipple igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxRipple [disabled]="true">Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">Flat</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="flat" igxRipple igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">Flat</button>
+                </div>
             </div>
         </article>
 
         <article class="sample-column">
             <h4 class="sample-title">Raised Buttons</h4>
             <div class="buttons-sample">
-                <button igxButton="raised" igxRipple="white">Raised</button>
-                <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Raised</button>
-                <button igxButton="raised" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Raised</button>
-                <button igxButton="raised" igxRipple="white">Raised</button>
-                <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Raised</button>
-                <button igxButton="raised" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Raised</button>
-                <button igxButton="raised" [disabled]="true">Raised</button>
-                <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">Raised</button>
-                <button igxButton="raised" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">Raised</button>
+                <div class="button-sample">
+                    <button igxButton="raised" igxRipple="white">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxRipple="white">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" [disabled]="true">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">Raised</button>
+                </div>
+                <div class="button-sample">
+                    <button igxButton="raised" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">Raised</button>
+                </div>
             </div>
         </article>
 
         <article class="sample-column">
             <h4 class="sample-title">Floating Action Buttons</h4>
             <div class="buttons-sample">
-                <button igxButton="fab" igxRipple="white">
+                <div class="button-sample">
+                    <button igxButton="fab" igxRipple="white">
                 <i class="material-icons">favorite</i>
                 </button>
-                <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">
                     <i class="material-icons">edit</i>
                 </button>
-                <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">
                     <i class="material-icons">add</i>
                 </button>
-                <button igxButton="fab" igxRipple="white">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxRipple="white">
                     <i class="material-icons">favorite</i>
                 </button>
-                <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C">
                     <i class="material-icons">edit</i>
                 </button>
-                <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow">
                     <i class="material-icons">add</i>
                 </button>
-                <button igxButton="fab" igxRipple="white" [disabled]="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxRipple="white" [disabled]="true">
                 <i class="material-icons">favorite</i>
                 </button>
-                <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" [disabled]="true">
                     <i class="material-icons">edit</i>
                 </button>
-                <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="fab" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" [disabled]="true">
                     <i class="material-icons">add</i>
                 </button>
+                </div>
             </div>
         </article>
 
         <article class="sample-column">
             <h4 class="sample-title">Icon Buttons</h4>
             <div class="buttons-sample">
-                <button igxButton="icon" igxRipple igxRippleCentered="true">
+                <div class="button-sample">
+                    <button igxButton="icon" igxRipple igxRippleCentered="true">
                     <i class="material-icons">search</i>
                 </button>
-
-                <button igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true">
                     <i class="material-icons">favorite</i>
                 </button>
-
-                <button igxButton="icon" igxRipple igxRippleCentered="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxRipple igxRippleCentered="true">
                     <i class="material-icons">more_vert</i>
                 </button>
-                <button igxButton="icon" igxButtonColor="white" igxButtonBackground="#E41D78" igxRipple="white" igxRippleCentered="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxButtonColor="white" igxButtonBackground="#E41D78" igxRipple="white" igxRippleCentered="true">
                     <i class="material-icons">search</i>
                 </button>
-
-                <button igxButton="icon" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" igxRippleCentered="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxButtonColor="#FBB13C" igxButtonBackground="#340068" igxRipple="#FBB13C" igxRippleCentered="true">
                     <i class="material-icons">favorite</i>
                 </button>
-
-                <button igxButton="icon" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" igxRippleCentered="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxButtonColor="yellow" igxButtonBackground="black" igxRipple="yellow" igxRippleCentered="true">
                     <i class="material-icons">more_vert</i>
                 </button>
-                <button igxButton="icon" igxRipple igxRippleCentered="true" [disabled]="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxRipple igxRippleCentered="true" [disabled]="true">
                     <i class="material-icons">search</i>
                 </button>
-
-                <button igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true" [disabled]="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxRipple igxButtonColor="#E41C77" igxRippleCentered="true" [disabled]="true">
                     <i class="material-icons">favorite</i>
                 </button>
-
-                <button igxButton="icon" igxRipple igxRippleCentered="true" [disabled]="true">
+                </div>
+                <div class="button-sample">
+                    <button igxButton="icon" igxRipple igxRippleCentered="true" [disabled]="true">
                     <i class="material-icons">more_vert</i>
                 </button>
+                </div>
             </div>
         </article>
     </section>
