--- a/demos/app/tabbar/sample.component.css
+++ b/demos/app/tabbar/sample.component.css
@@ -1,11 +1,7 @@
-.sample-content {
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-}
-
 .tabbar-wrapper {
     position: relative;
     height: 540px;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
     overflow: hidden;
 }
 
