(ADD) Demo component for badge

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -9,20 +9,20 @@
                 <i class="material-icons">account_circle</i>
                 <span>Avatar</span>
             </span>
-                        
-            <span class="nav-item">
+
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/badge">
                 <i class="material-icons">error</i>
                 <span>Badge</span>
             </span>
 
-            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">                
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttonGroup">
                 <i class="material-icons">group_work</i>
                 <span>Button Group</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/card">
                 <i class="material-icons">home</i>
-                <span>Card</span> 
+                <span>Card</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/carousel">
@@ -32,14 +32,14 @@
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/grid">
                 <i class="material-icons">view_column</i>
-                <span>Grid</span> 
+                <span>Grid</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/dialog">
                 <i class="material-icons">all_out</i>
-                <span>Dialog</span> 
+                <span>Dialog</span>
             </span>
-            
+
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/inputs">
                 <i class="material-icons">web</i>
                 <span>Forms</span>
@@ -47,7 +47,7 @@
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/icon">
                 <i class="material-icons">android</i>
-                <span>Icon</span> 
+                <span>Icon</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/list">
@@ -57,7 +57,7 @@
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navbar">
                 <i class="material-icons">arrow_back</i>
-                <span>Navbar</span>  
+                <span>Navbar</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/navigation-drawer">
@@ -67,17 +67,17 @@
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/progressbar">
                 <i class="material-icons">poll</i>
-                <span>Progress Indicators</span> 
+                <span>Progress Indicators</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/range">
                 <i class="material-icons">linear_scale</i>
-                <span>Range</span> 
+                <span>Range</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/snackbar">
                 <i class="material-icons">feedback</i>
-                <span>Snackbar</span> 
+                <span>Snackbar</span>
             </span>
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/tabbar">
@@ -87,17 +87,17 @@
 
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/toast">
                 <i class="material-icons">android</i>
-                <span>Toast</span> 
+                <span>Toast</span>
             </span>
 
             <!--Directives-->
             <span class="nav-item header">Directives</span>
-            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttons">                
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/buttons">
                 <i class="material-icons">radio_button_unchecked</i>
                 <span>Buttons</span>
             </span>
 
-            <span class="nav-item">                
+            <span class="nav-item">
                 <i class="material-icons">wifi_tethering</i>
                 <span>Ripple</span>
             </span>
@@ -106,7 +106,7 @@
             <span class="nav-item header">Utils</span>
             <span class="nav-item" [routerLinkActive]="'active'" routerLink="/data-operations">
                 <i class="material-icons">data_usage</i>
-                <span>Data Operations</span> 
+                <span>Data Operations</span>
             </span>
         </nav>
     </aside>
