(ADD) Ripple demo component

--- a/demos/app/app.component.html
+++ b/demos/app/app.component.html
@@ -97,7 +97,7 @@
                 <span>Buttons</span>
             </span>
 
-            <span class="nav-item">
+            <span class="nav-item" [routerLinkActive]="'active'" routerLink="/ripple">
                 <i class="material-icons">wifi_tethering</i>
                 <span>Ripple</span>
             </span>
