(FIX) Empty tabs in tab bar

--- a/demos/app/tabbar/sample.component.html
+++ b/demos/app/tabbar/sample.component.html
@@ -36,12 +36,26 @@
                     </igx-tab-panel>
                     <igx-tab-panel icon="supervisor_account">
                         <div class="tab-content">
-
+                            <h3>Tab 2 Content</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
+                                consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum
+                                urna arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus.
+                                Donec efficitur purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus
+                                a magna euismod volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a
+                                arcu sollicitudin finibus. Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam.
+                                Mauris vel quam at velit venenatis vulputate in quis nisl.</p>
                         </div>
                     </igx-tab-panel>
                     <igx-tab-panel icon="format_list_bulleted">
                         <div class="tab-content">
-
+                            <h3>Tab 3 Content</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius sapien ligula. Donec
+                                consectetur accumsan suscipit. Praesent rutrum tellus blandit bibendum cursus. Vestibulum
+                                urna arcu, bibendum nec molestie ac, varius congue massa. Mauris porttitor viverra lacus.
+                                Donec efficitur purus id urna dapibus, vitae pharetra orci pellentesque. Vestibulum id lacus
+                                a magna euismod volutpat id in mi. Etiam a nunc ut tellus dictum porta. Donec in ligula a
+                                arcu sollicitudin finibus. Vivamus id lorem pulvinar, accumsan justo vitae, vehicula diam.
+                                Mauris vel quam at velit venenatis vulputate in quis nisl.</p>
                         </div>
                     </igx-tab-panel>
                 </igx-tab-bar>
