Well, I broke the snackbar... Fixing it now.

--- a/demos/app/snackbar/sample.component.html
+++ b/demos/app/snackbar/sample.component.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="snackbar-container">
-                    <igx-snackbar #snackbar [actionText]="actionName" [message]="message" (animationStarted)="onAnimation($event)" (animationDone)="onAnimation($event)"
+                    <igx-snackbar #snackbar [actionText]="actionName" [message]="message"
                         (onAction)="undoColorChange(snackbar)">
                     </igx-snackbar>
                 </div>
